k8s/services/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ecommerce
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 80
